# fastaValidator.rs

./: .gitignore  0000231_seq.fsa  2seqidcheck.cpp.txt  2seqidcheck.txt  Cargo.toml  Makefile  README.md  error.cpp.txt  error.txt  runtest.sh
.cargo/: config.toml
src/: main.rs
