[package]
name = "checkFastaCOVID19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "*"
flate2 = "1.0.25"
prettytable-rs = "^0.10"
clap={version="*",features=["derive"]}
os_str_bytes = "6.4.1"
# path-clean = "0.1.0"
# normpath = "1.1"
# [profile.release.build]
# target = "x86_64-unknown-linux-musl"


